# express-postgres-ts-starter

./: .bazelignore  .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitignore  .huskyrc  .huskyrc.js  .npmrc  .nvmrc  .yarnrc  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  WORKSPACE  commitlint.config.js  docker-compose.yaml  docker-compose.yml  jest.config.js  license-checker-config.json  license-header.txt  lint-staged.config.js  local.Dockerfile  nodemon.json  package.json  prettier.config.js  server.ts  tsconfig.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  build.yml.bak  ci.yml  lint.yml  main.yml
.husky/: commit-msg  common.sh  pre-commit  pre-push
db/: knexfile.js
db/migrations/: 20180727143917_add_pgcrypto.js  20200503154924_add_users.js  20230724063920_add_roles.js
db/seeds/: 000_delete_tables.js  001_users.js  002_roles.js
deplyoments/k3s/: README.md  app.yaml  config.yaml  job.yaml  minio.yaml  namespace.yaml  postgres.yaml  redis.yaml
patches/: trim-newlines+5.0.0.patch
scripts/: build-docker.ps1  build-docker.sh
secrets/: local.env
src/: config.ts
src/config/: config.ts  index.ts
src/controller/: ping.ts  user.ts
src/graphql/: context.ts  resolvers.ts  schema.ts  schemas.ts
src/lib/: change-case.ts  changeCase.ts  cryptor.ts  date.ts  index.ts  jwt.ts  knexer.ts  logger.ts  redis.ts  util.ts
src/middlewares/: body-parser.ts  compression.ts  index.ts  morgan.ts  session.ts
src/repositories/: index.ts  user.ts
src/routes/: file.ts  (+3 more)
static/: index.html
tools/: commitlint-config.js
(+21 files in other folders)
